--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="OmbuShop Theme: Minimost : Tu Tienda Online: Plantilla Estilo Minimalista" />
 
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic,700italic|PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>OmbuShop Theme: Minimost</title>
@@ -15,47 +16,50 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner">
+        <header class="inner main">
+          <a href="http://www.ombushop.com" id="ombushop_logo">OmbuShop</a>
           <a id="forkme_banner" href="https://github.com/ombushop/minimost">View on GitHub</a>
-
-          <h1 id="project_title">OmbuShop Theme: Minimost</h1>
-          <h2 id="project_tagline">Tu Tienda Online: Plantilla Estilo Minimalista</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ombushop/minimost/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ombushop/minimost/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
-    </div>
+    </div> <!-- / #header_wrap -->
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <header>
+          <h1 id="project_title">OmbuShop Theme: Minimost</h1>
+          <h2 id="project_tagline">Tu Tienda Online: plantilla estilo minimalista</h2>
+          <div id="downloads">
+            <a class="zip_download_link download_link" href="https://github.com/ombushop/minimost/zipball/master">Download this project as a .zip file</a>
+            <a class="tar_download_link download_link" href="https://github.com/ombushop/minimost/tarball/master">Download this project as a tar.gz file</a>
+          </div>
+        </header>
         <h3>OmbuShop Theme: Minimost</h3>
 
-<p>Ahora tu tienda online puede tener una onda minimalista.</p>
+        <p>Ahora tu tienda online puede tener una onda minimalista.</p>
 
-<p>Para elegir esta plantilla, sólo tienes que ir a tu panel de administración y elegir <em>Minimost</em>.</p>
+        <p>Para elegir esta plantilla, sólo tienes que ir a tu panel de administración y elegir <em>Minimost</em>.</p>
 
-<h3>¿Quieres ver otra plantilla?</h3>
+        <img src="images/minimost.png" alt="Minimost screenshot" />
 
-<p>Puedes ir a <a href="https://secure.ombushop.com/admin/styles">https://secure.ombushop.com/admin/styles</a> y elegir la que más te guste para tu tienda.</p>
+        <h3>¿Quieres ver otra plantilla?</h3>
 
-<h3>¿Tienes alguna pregunta?</h3>
+        <p>Puedes ir a <a href="https://secure.ombushop.com/admin/styles">https://secure.ombushop.com/admin/styles</a> y elegir la que más te guste para tu tienda.</p>
 
-<p>Puedes ver algunas de las preguntas frecuentes sobre OmbuShop en esta página: <a href="http://www.ombushop.com/ayuda">http://www.ombushop.com/ayuda</a></p>
+        <h3>¿Tienes alguna pregunta?</h3>
 
-<h3>Autores</h3>
+        <p>Puedes ver algunas de las preguntas frecuentes sobre OmbuShop en esta página: <a href="http://www.ombushop.com/ayuda">http://www.ombushop.com/ayuda</a></p>
 
-<p>Esta plantilla es cortesía de <a href="https://github.com/lucasmourelle" class="user-mention">@lucasmourelle</a> y <a href="https://github.com/ombushop" class="user-mention">@ombushop</a>. </p>
+        <h3>Autores</h3>
 
-<h3>Preguntas de Diseño</h3>
+        <p>Esta plantilla es cortesía de <a href="https://github.com/lucasmourelle" class="user-mention">@lucasmourelle</a> y <a href="https://github.com/ombushop" class="user-mention">@ombushop</a>. </p>
 
-<p>Puedes escribirnos a <a href="mailto:hola@ombushop.com">hola@ombushop.com</a> y te ayudaremos.</p>
+        <h3>Preguntas de Diseño</h3>
 
-<p>¿Todavía no tienes tu tienda online? <a href="http://www.ombushop.com?utm_source=github&amp;utm_medium=readme&amp;utm_term=theme">Crea tu tienda online hoy</a> con OmbuShop. </p>
+        <p>Puedes escribirnos a <a href="mailto:hola@ombushop.com">hola@ombushop.com</a> y te ayudaremos.</p>
+
+        <p>¿Todavía no tienes tu tienda online? <a href="http://www.ombushop.com?utm_source=github&amp;utm_medium=readme&amp;utm_term=theme">Crea tu tienda online hoy</a> con OmbuShop. </p>
       </section>
-    </div>
+    </div> <!-- / #main_content_wrap -->
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
@@ -63,7 +67,7 @@
         <p class="copyright">OmbuShop Theme: Minimost maintained by <a href="https://github.com/ombushop">ombushop</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-    </div>
+    </div> <!-- / #footer_wrap -->
 
     
 
