Changed copy, added demo link

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
         </header>
         <h3>OmbuShop Theme: Minimost</h3>
 
-        <p>Ahora tu tienda online puede tener una onda minimalista.</p>
+        <p>Minimost es una plantilla responsive minimalista y racional, simple y elegante, con predominancia de tonos blancos, rosa perlado y detalles en negro. Ideal para productos que se destacan por si mismos, como joyas o relojes.</p>
 
         <p>Para elegir esta plantilla, sólo tienes que ir a tu panel de administración y elegir <em>Minimost</em>.</p>
 
-        <img src="images/minimost.png" alt="Minimost screenshot" />
+        <a class="demo" href="http://minimost.ombushop.com/" target="_blank" title="Ver demo Minimost">Ver demo</a>
+
+        <img src="images/thumbnail-small.jpg" alt="Minimost screenshot" />
 
         <h3>¿Quieres ver otra plantilla?</h3>
 
@@ -52,7 +54,7 @@
 
         <h3>Autores</h3>
 
-        <p>Esta plantilla es cortesía de <a href="https://github.com/lucasmourelle" class="user-mention">@lucasmourelle</a> y <a href="https://github.com/ombushop" class="user-mention">@ombushop</a>. </p>
+        <p>Esta plantilla es cortesía de <a href="https://github.com/cecilia-ombulabs" class="user-mention">@cecilia-ombulabs</a> y <a href="https://github.com/ombushop" class="user-mention">@ombushop</a>. </p>
 
         <h3>Preguntas de Diseño</h3>
 
@@ -70,7 +72,7 @@
       </footer>
     </div> <!-- / #footer_wrap -->
 
-    
+
 
   </body>
 </html>
